@@ -190,7 +190,9 @@ click may be recorded for use by <strong>submit</strong>, but the value is not c
 unless the 'config' command has changed the default behavior.
 See 'config' and <a class="reference" href="#id1">details on form handling</a> for more information on
 the 'formvalue' command.</p>
-<p><strong>fv</strong> -- abbreviation for 'formvalue'</p>
+<p><strong>fv</strong> -- abbreviation for 'formvalue'.</p>
+<p><strong>formaction</strong> <em>&lt;formnum&gt; &lt;action&gt;</em> -- change the form action URL to the given URL.</p>
+<p><strong>fa</strong> -- abbreviation for 'fa'.</p>
 <p><strong>formclear</strong> -- clear all values in the form.</p>
 <p><strong>formfile</strong> <em>&lt;formspec&gt; &lt;fieldspec&gt; &lt;filename&gt; [ &lt;content_type&gt; ]</em> -- attach a file to a file upload button by filename.</p>
 </div>
@@ -605,7 +607,7 @@ functionality that can be directly applied to twill.</li>
 <li>command line completion doesn't understand extend_with results yet.</li>
 <li>extend_with etc. -- module namespaces, e.g. extmodule.fn?</li>
 <li>doc reorganization: separate out commands, make source docs.</li>
-<li>implement more complex proxy support.</li>
+<li>implement more complex proxy support.  proxies proxies proxies.</li>
 <li>add config directives for socket timeout.</li>
 </ol>
 </blockquote>
@@ -644,7 +646,7 @@ quite a bit.  Thanks, guys...</p>
 MATSUNO Tokuhiro, Elvelind Grandin, Mike Rovner, and sureshvv.</p>
 <p>Patches have been submitted by Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, William Volkman,
-Tommi Virtanen, and Simon Buenzli.  Thanks!</p>
+Tommi Virtanen, Simon Buenzli, and sureshvv.  Thanks!</p>
 <hr class="docutils" />
 <p>This document was written by C. Titus Brown, <a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>.
 Last updated November '05.</p>
