@@ -1,5 +1,9 @@
 2005-11-27  Titus Brown  <t@issola.caltech.edu>
 
+	* Added in sureshvv's formaction/fa patch.
+
+	* Added in docs re 'tidy'.
+
 	* Put in a rough 'tidy' implementation by wrapping FormsFactory and
 	  LinksFactory.parser_class.
 
